kajit/tests/snapshots/corpus__generated_ra_mir_postcard_bool_true_false_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: ra_text
---
ra_func @0 { ; entry: b0
  block b0: ; insts: 2
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    call_intrinsic(0x<ptr>, fo=1) !gpr,simd
    term: return ; uses: []
    succs: (none)
}
